--- a/docs/motility_progressive.qmd
+++ b/docs/motility_progressive.qmd
@@ -350,8 +350,8 @@ Let's say we want to calculate the drop in progressive mobility for various etha
 
 ```{r}
 predict_logit <- function(conc, intercept = 1, slopes) {
-  slopes_mat <- matrix(mp_etoh_slope, nrow = 1,
-    dimnames = list(NULL, names(mp_etoh_slope)))
+  slopes_mat <- matrix(slopes, nrow = 1,
+    dimnames = list(NULL, names(slopes)))
   data.frame(conc = conc, -intercept +
     boot::inv.logit(boot::logit(intercept) +
     conc %*% slopes_mat))
